--- a/public/css/displayOrganisation.css
+++ b/public/css/displayOrganisation.css
@@ -1,3 +1,89 @@
+
+/* Adding the Circular font */
+@font-face {
+    font-family: 'CircularFont';
+    src: url('/fonts/circular-std-font-family/CircularStd-MediumItalic.ttf') format('woff');
+    /* Add additional formats if needed (e.g., woff2) */
+  }
+  
+  
+/* nav logo code */
+.logo {
+    height: 35px;
+    width: 140px;
+    /* padding: 0px; */
+    padding-right: 40px;
+    margin: 0%;
+}
+/* Main Header Coder*/
+header {
+    background-color: lightseagreen;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center vertically */
+    padding: 20px;
+    font-size: 18px;
+    font-family: 'Circularfont', Arial, Helvetica, sans-serif;
+}
+
+/* Navigation */
+
+.header-left a {
+    color: #fff;
+    text-decoration: none;
+    margin-left: 0px;
+}
+
+.header-right {
+    display: flex;
+    justify-content: space-between; /* Space between elements */
+    align-items: center; /* Center vertically */
+    margin-left: auto; /* Push the links to the right */
+}
+
+.header-right a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+    text-align: center;
+}
+
+.header-right a {
+    margin-right: 80px; /* Adjust this margin if needed */
+}
+
+.header-right a:hover {
+    color: #1500ff;
+    text-decoration: underline;
+}
+
+  /* Secondary navigation code */
+.secondary-nav {
+    background-color: blueviolet;
+    transition: background-color 0.3s ease;
+    padding: 10px;
+    text-align: right; /* Align text to the right */
+    font-size: 16px;
+    font-family: 'Circularfont', sans-serif;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.secondary-nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    margin: 0 10px;
+}
+
+.secondary-nav a:hover {
+    color: #ffd700;
+    text-decoration: underline;
+}
+
+
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
@@ -5,12 +91,6 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem;
-}
 
 main {
     max-width: 800px;
