--- a/views/pages/displayOrganisation.ejs
+++ b/views/pages/displayOrganisation.ejs
@@ -1,16 +1,4 @@
 
-
-<!-- views/pages/displayOrganization.ejs -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Organization</title>
-    <link rel="stylesheet" href="/css/displayOrganization.css">
-    <!-- Add other stylesheets, scripts, or dependencies here -->
-</head>
 <!-- views/pages/displayOrganisation.ejs -->
 
 <!DOCTYPE html>
@@ -19,6 +7,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"--> 
+    <link rel="stylesheet" href="../css/displayOrganisation.css">
     <title>Your Organization Profile</title>
     
 </head>
@@ -26,11 +16,26 @@
 <body>
 
     <header>
-        <h1>Your Organization Profile</h1>
-        <h2>Welcome  <%= user.username %>!</h2>
+        
+        <div class="header-left">
+            <a href="index.html"><img class="logo" src="Images/logo-horizontal.png"></a>
+            <!-- <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1> -->
+        </div>
+    
+        <nav class="header-right">
+            <a href="registration">Refer Support</a>
+            <a href="addOrganisation" >Add Support Group</a>
+            <a href="logout">LogOut</a>
+            
+            <!-- Add more links as needed -->
+        </nav>
+
     </header>
 
+    
+
     <main>
+       <h2> Welcome  <%= organization.username %>!</h2>
         <section>
             <label for="orgName">Organization Name:</label>
             <p><%= organization.orgName %></p>
@@ -39,26 +44,33 @@
         <section>
             <label for="email">Email:</label>
             <p><%= organization.email %></p>
+
         </section>
 
         <section>
             <label for="phoneNumber">Phone Number:</label>
             <p><%= organization.phoneNumber %></p>
+            
         </section>
 
         <section>
             <label for="instaHandles">Instagram Handles:</label>
             <p><%= organization.instaHandles %> </p>
+           
         </section>
 
         <section>
             <label for="twitterHandles">Twitter Handles</label>
             <p><%= organization.twitterHandles %></p>
+            
         </section>
 
-        <!-- Add styling for other organization details -->
-
-        <button onclick="location.href='/addOrganisation'">Update Organization Details</button>
+        <section>
+            <label for="comments">Twitter Handles</label>
+            <p><%= organization.comments %></p>
+            
+        </section>
+        
     </main>
 
 
