some changes by Dorcas

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,4 +1,18 @@
+@font-face {
+  font-family: 'CircularFont';
+  src: url('/fonts/circular-std-font-family/CircularStd-MediumItalic.ttf') format('woff');
+  /* Add additional formats if needed (e.g., woff2) */
+}
 
+
+/* nav logo code */
+.logo {
+  height: 35px;
+  width: 140px;
+  /* padding: 0px; */
+  padding-right: 40px;
+  margin: 0%;
+}
 
 .container{
   display:flex;
@@ -13,13 +27,13 @@
     
     }
     
-  
+/*   
   .logo {
   height:30px;
   width:30px;
   padding:0px;
   margin:0%;
-}
+} */
 
     .PageText{
       /*position: absolute;
