--- a/views/pages/registration.ejs
+++ b/views/pages/registration.ejs
@@ -2,26 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include('../partials/head') %>
     <title>Registration Page</title>
     <link rel="stylesheet" type="text/css" href="css/register.css">
 </head>
 
 <body>
     <header>
-        <div class="header-left">
-            <a><img class="logo" src="../Images/logo.png"></a>
-            <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
-        </div>
-        <nav class="header-right">
-            <a href="..\index.html">Home</a>
-            <a href="./aboutUs.html">About Us</a>
-            <a href="./contact.html">Contact Us</a>
-            <a href="./immediateSupport.html" >Immediate Support</a>
-            <a href="./login.html" >Login</a>
-            <!-- Add more links as needed -->
-        </nav>
+        <%- include('../partials/headerR') %>
+        
     </header>
 
     <div class="container">
