--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+   <!--<a href="https://www.alturo.app/">Visit our About Us page</a>-->
 
     <header>
         <div class="header-left">
