--- a/views/pages/displayOrganisation.ejs
+++ b/views/pages/displayOrganisation.ejs
@@ -24,7 +24,7 @@
     
         <nav class="header-right">
             <a href="registration">Refer Support</a>
-            <a href="addOrganisation" >Add Support Group</a>
+            <a href="addSupportInfo" >Add Support Group</a>
             <a href="logout">LogOut</a>
             
             <!-- Add more links as needed -->
