fixed some links/added link to alturo website

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
         <a href="aboutUs">About Us</a>
         <a href="ImmediateSupport" >Immediate Support</a>
         <a href="#">Our Services</a>
-        <a href="#">Join Us</a>
+        <a href="registration">Join Us</a>
 
     </div>
 
