--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -17,24 +17,37 @@
             <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
         </div>
         <nav class="header-right">
-            <a href="..\index.html">Home</a>
-            <a href="./contact.html">Contact Us</a>
-            <a href="../pages/registration.html">Register</a>
-            <a href="./immediateSupport.html">Immediate Support</a>
-            <a href="./login.html">Login</a>
+            <a href="index">Home</a>
+            <a href="contactUs">Contact Us</a>
+            <a href="registration">Register</a>
+            <a href="immediateSupport">Immediate Support</a>
+            <a href="login">Login</a>
 
             <!-- Add more links as needed -->
         </nav>
     </header>
+
+    <a class="link1" href="https://www.alturo.app/">Click here for the official Alturo website</a>
+
     <style>
-        body::after {
+        /* body::after {
             content: "Alturo is centralising support and activities";
             position: absolute;
             top: 50%;
             left: 30%;
-            transform: translate(-50%, -50%);
+            transform: translate(-70%, -40%, 30%);
             color: white;
             font-size: 35px;
+        } */
+
+        .link1 {
+            transform: translate(-70%, -70%, 30%); 
+            position: absolute;
+            top: 60%;
+            left: 35%;
+            color: white;
+            font-size: 35px;
+            text-align: center;
         }
         
         body {
