--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!--views/partials/header.ejs-->
 
     <div class="header-left">
-        <a href="index.html"><img class="logo" src="Images/logo-horizontal.png"></a>
+        <a href="index"><img class="logo" src="Images/logo-horizontal.png"></a>
         <!-- <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1> -->
     </div>
 
